# nse_trader

./: README.md  gunicorn_config.py  pyproject.toml
nse_trader/: __init__.py  analysis.py  app.py  config.py  data_fetcher.py  technical_analysis.py
nse_trader/static/: style.css
nse_trader/templates/: index.html
tests/: test_analysis.py  test_backtesting.py  test_scraper.py
